--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,3 @@
-<h1>TEST</h1>
+<div class="burgerIcon">
+    <img src="https://www.flaticon.com/svg/static/icons/svg/3075/3075929.svg" alt="burger icon">
+</div>
