--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Central</title>
-    <link rel="stylesheet" href="../../app/public/assets/css/styles.css"/>
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
+
 <body>
+    <header>
+        <h2>Burger Central</h2>
+    </header>
     {{{body}}}
-    <script src="../../app/public/assets/js/script.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
+
 </html>
