--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,19 @@
 <div class="burgerIcon">
     <img src="https://www.flaticon.com/svg/static/icons/svg/3075/3075929.svg" alt="burger icon">
 </div>
+
+<div class="burgerDiv clearfix">
+    <div id="ordered">
+        Ordered
+    </div>
+
+    <div id="eaten">
+        Eaten
+    </div>
+</div>
+
+<form id="form">
+    <label for="burger">Burger:</label>
+    <input type="text" name="burger" id="burger">
+    <button type="submit">Get your burger</button>
+</form>
