--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,6 +11,7 @@
                 <li>Id: {{id}}</li>
                 <li>Burger: {{burger_name}}</li>
                 <li>Eaten: {{isEaten}}</li>
+                <button class="eatBtn" type="submit" data-id={{id}}>Eat me!</button>
             </ul>
         {{/each}}
     </div>
