--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,6 +24,7 @@
                 <li>Id: {{id}}</li>
                 <li>Burger: {{burger_name}}</li>
                 <li>Eaten: {{isEaten}}</li>
+                <button class="throwAwayBtn" type="submit" data-id={{id}}>Throw away!</button>
             </ul>
         {{/each}}
     </div>
